--- a/themes/daria-day/main.css
+++ b/themes/daria-day/main.css
@@ -360,29 +360,5 @@ template {
 [hidden] {
   display: none; }
 
-#footer {
-  width: 100%;
-  height: 275px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #062B35; }
-
-#footer-sidebar {
-  display: block;
-  height: 250px; }
-
-#footer-sidebar1 {
-  float: left;
-  width: 340px;
-  margin-left: 5px;
-  margin-right: 5px; }
-
-#footer-sidebar2 {
-  float: left;
-  width: 340px;
-  margin-right: 5px; }
-
-#footer-sidebar3 {
-  float: left;
-  width: 340px; }
+footer {
+  color: red; }
