--- a/themes/daria-day/sass/layout/_footer.scss
+++ b/themes/daria-day/sass/layout/_footer.scss
@@ -1,64 +1,58 @@
 #footer {
+    margin-top: 6%;
     width: 100%;
-    height: 275px;
-    display: flex;
-    background-color: #062B35;
+    display: block;
+    // height: 275px;
+    // display: flex;
+    // background-color: #062B35;
+}
+.companyinfo{
+    margin-top: 6%;
+    width: 100%;
+    display: block;
+    // justify-content: space-around;
+    // line-height: 20px;
+
+
+    h3.widget-title{
+        
+        color:white;
+        font-family: Avenir;
+        font-size: 1.2em;
+    }
+    a {
+        text-decoration: none ;
+        color: white;
+        font-family: Avenir;
+        font-weight: 100;
+        font-size: .8em;
+     }
+     p{
+        line-height: .3;
+     }
+   a:hover
+     {
+       color:white;
+       text-decoration:none;
+       cursor:pointer;
+       
+      }
 }
 
-// .companyinfo{
-//     margin-left: 10% ;
-//     margin-top: 4%;
-//     width: 46%;
-//     display: flex;
-//     justify-content: space-between;
-//     line-height: 20px;
-//     h2{
-//         color:white;
-//         font-family: Avenir;
-//         font-size: 1em;
-//     }
-//     a {
-//         text-decoration: none ;
-//         color: white;
-//         font-family: Avenir;
-//         font-weight: 100;
-//         font-size: .8em;
-//      }
-//      p{
-//         line-height: .3;
-//      }
-//    a:hover
-//      {
-//        color:white;
-//        text-decoration:none;
-//        cursor:pointer;
-       
-//       }
-// }
-
-// .darialogo{
-//     max-width: 40%;
-//     padding: 10%;
-//     background-image: url("images/DariaDay_logo-02.svg");
-//     background-repeat: no-repeat;
-//     margin-left: 18%;
-//     z-index: 99;
-// }
-
-
-
+#footer-sidebar {
+    width: 100%;
+    height: 500px;
+    display: grid;
+    background-color: #062B35;
+    justify-content: center;
+}
     
-    #products {
-    background-color: red;
-    }
-    
-    #footer-sidebar2 {
-    float: left;
-    width: 340px;
-    margin-right:5px;
-    }
-    
-    #footer-sidebar3 {
-    float: left;
-    width: 340px;
-    }
+#darialogo {
+    display: flex;
+    z-index: 99;
+}
+
+
+div#customers{
+  
+}
