--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -361,28 +361,42 @@ template {
   display: none; }
 
 #footer {
+  margin-top: 6%;
   width: 100%;
-  height: 275px;
+  display: block; }
+
+.companyinfo {
+  margin-top: 6%;
+  width: 100%;
+  display: block; }
+  .companyinfo h3.widget-title {
+    color: white;
+    font-family: Avenir;
+    font-size: 1.2em; }
+  .companyinfo a {
+    text-decoration: none;
+    color: white;
+    font-family: Avenir;
+    font-weight: 100;
+    font-size: .8em; }
+  .companyinfo p {
+    line-height: .3; }
+  .companyinfo a:hover {
+    color: white;
+    text-decoration: none;
+    cursor: pointer; }
+
+#footer-sidebar {
+  width: 100%;
+  height: 500px;
+  display: grid;
+  background-color: #062B35;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+#darialogo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #062B35; }
-
-#footer-sidebar {
-  display: block;
-  height: 250px; }
-
-#footer-sidebar1 {
-  float: left;
-  width: 340px;
-  margin-left: 5px;
-  margin-right: 5px; }
-
-#footer-sidebar2 {
-  float: left;
-  width: 340px;
-  margin-right: 5px; }
-
-#footer-sidebar3 {
-  float: left;
-  width: 340px; }
+  z-index: 99; }
