--- a/themes/daria-day/sass/_hero.scss
+++ b/themes/daria-day/sass/_hero.scss
@@ -1,3 +1,7 @@
+/* =========================
+   Hero Banner Section
+   =========================
+*/
 .home-hero {
     align-items: center;
     background: linear-gradient(180deg,rgba(0,0,0,.3) 0,rgba(0,0,0,.2)),#969696 url('/wp-content/themes/daria-day/images/mobile-hero.png') no-repeat;
@@ -48,3 +52,99 @@
           text-decoration: none;
       }
   }
+@media only screen and (min-width: 600px) {
+  .home-hero {
+    display: flex;
+    justify-items: left;
+    .hero-title{
+      font-size: 42px;
+      text-align: left;
+    }
+    .hero-sub-title{
+      font-size: 30px;
+      text-align: left;
+      line-height: 30px;
+      padding: 0px 50px 10px 80px;
+    }
+    .home-hero button{
+      display: flex;
+      width: 350px;
+      height: 70px;
+      align-items: left;
+    }
+    .hero-btn:hover{
+      box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
+      cursor: pointer;
+      border-radius: 10px;
+    }
+    .hero-btn p{
+      color: #fff;
+      font-size: 20px;
+    }
+    .hero-btn a{
+        text-decoration: none;
+    }
+  }
+}
+/* =========================
+      Subscription Section
+    ========================= */
+.subscription {
+    text-align: center;
+
+     .subscription-title {
+        font-family: 'PlayfairDisplay';
+        font-size: 32px;
+        color: #062b35;
+      }
+      .subscription-sub-title{
+        font-family: 'AvenirNext';
+        font-size: 21px;
+        color: #062b35;
+        line-height: 30px;
+      }
+      .text-input{
+        width: 200px;
+        height: 36px;
+        padding: 1px 10px;
+        border: solid 1px #269a65;
+        background-color: #ffffff;
+        cursor: pointer;
+        padding-left: -2px;
+      }
+      .signupbtn {
+        width: 112px;
+        height: 40px;
+        color: #fff;
+        margin-left: -10px;
+        cursor: pointer;
+        border: solid 1px #269a65;
+        background-color: #269a65;
+      }
+      .signupbtn:hover{
+        width: 113px;
+        height: 40px;
+      }
+}
+
+/* =========================
+      Social Media Section
+   ========================= */
+.social-media{
+  text-align: center;
+  .social-media-title {
+    font-family: 'PlayfairDisplay';
+    font-size: 32px;
+    color: #062b35;
+  }
+  .social-media-icons img{
+    width: 50px;
+    height: 50px;
+    padding: 1px 10px;
+  }
+  .social-media-icons img:hover{
+    width: 51px;
+    height: 51px;
+  }
+}
+  
