--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -360,7 +360,10 @@ template {
 [hidden] {
   display: none; }
 
-<<<<<<< HEAD
+/* =========================
+   Hero Banner Section
+   =========================
+*/
 .home-hero {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -413,8 +416,92 @@ template {
     font-size: 20px; }
   .home-hero .hero-btn a {
     text-decoration: none; }
-=======
-<<<<<<< HEAD
+
+@media only screen and (min-width: 600px) {
+  .home-hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-items: left; }
+    .home-hero .hero-title {
+      font-size: 42px;
+      text-align: left; }
+    .home-hero .hero-sub-title {
+      font-size: 30px;
+      text-align: left;
+      line-height: 30px;
+      padding: 0px 50px 10px 80px; }
+    .home-hero .home-hero button {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      width: 350px;
+      height: 70px;
+      -webkit-box-align: left;
+          -ms-flex-align: left;
+              align-items: left; }
+    .home-hero .hero-btn:hover {
+      -webkit-box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
+              box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
+      cursor: pointer;
+      border-radius: 10px; }
+    .home-hero .hero-btn p {
+      color: #fff;
+      font-size: 20px; }
+    .home-hero .hero-btn a {
+      text-decoration: none; } }
+
+/* =========================
+      Subscription Section
+    ========================= */
+.subscription {
+  text-align: center; }
+  .subscription .subscription-title {
+    font-family: 'PlayfairDisplay';
+    font-size: 32px;
+    color: #062b35; }
+  .subscription .subscription-sub-title {
+    font-family: 'AvenirNext';
+    font-size: 21px;
+    color: #062b35;
+    line-height: 30px; }
+  .subscription .text-input {
+    width: 200px;
+    height: 36px;
+    padding: 1px 10px;
+    border: solid 1px #269a65;
+    background-color: #ffffff;
+    cursor: pointer;
+    padding-left: -2px; }
+  .subscription .signupbtn {
+    width: 112px;
+    height: 40px;
+    color: #fff;
+    margin-left: -10px;
+    cursor: pointer;
+    border: solid 1px #269a65;
+    background-color: #269a65; }
+  .subscription .signupbtn:hover {
+    width: 113px;
+    height: 40px; }
+
+/* =========================
+      Social Media Section
+   ========================= */
+.social-media {
+  text-align: center; }
+  .social-media .social-media-title {
+    font-family: 'PlayfairDisplay';
+    font-size: 32px;
+    color: #062b35; }
+  .social-media .social-media-icons img {
+    width: 50px;
+    height: 50px;
+    padding: 1px 10px; }
+  .social-media .social-media-icons img:hover {
+    width: 51px;
+    height: 51px; }
+
 #footer {
   margin-top: 6%;
   width: 100%;
@@ -455,8 +542,3 @@ template {
   display: -ms-flexbox;
   display: flex;
   z-index: 99; }
-=======
-body {
-  background-color: purple; }
->>>>>>> 879b1448a17aee5f2e8e5a6c8f9253fe4b1d8694
->>>>>>> 10402e9cd9a4373a2a4406388ac5ee799cdf5ceb
