--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -360,6 +360,61 @@ template {
 [hidden] {
   display: none; }
 
+.slider {
+  text-align: center;
+  margin-top: 2.5%; }
+
+ul {
+  width: 70%;
+  scroll-behavior: smooth;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  text-align: center;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  padding-top: 2%; }
+
+ul::-webkit-scrollbar {
+  display: none; }
+
+li {
+  list-style: none;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  width: 20%;
+  margin-left: 8.5%;
+  margin-right: 1.5%;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
+
+li {
+  width: 470px; }
+
+li:hover {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0); }
+
+.link {
+  text-decoration: none; }
+
+.title {
+  vertical-align: middle; }
+
+.bracelets, .earrings, .necklaces, .energy {
+  border: 2px solid #73AD21;
+  padding: 20px;
+  width: 200px;
+  height: 200px;
+  margin-left: 5%; }
+
 #footer {
   margin-top: 6%;
   width: 100%;
@@ -406,3 +461,83 @@ div#company {
 
 div#customers {
   text-align: center; }
+
+.ourstory {
+  background-color: #062B35;
+  width: 100%;
+  display: block; }
+  .ourstory .skewedphotos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 23%;
+    margin-top: 10%;
+    height: 400px; }
+    .ourstory .skewedphotos .photo1 {
+      background-color: green;
+      height: 238px;
+      width: 214px;
+      -webkit-transform: rotate(-10deg);
+              transform: rotate(-10deg); }
+    .ourstory .skewedphotos .photo2 {
+      background-color: orange;
+      height: 238px;
+      width: 214px;
+      -webkit-transform: translate(0, 50px) rotate(10deg);
+              transform: translate(0, 50px) rotate(10deg); }
+  .ourstory .copy {
+    display: grid;
+    color: white; }
+    .ourstory .copy h4 {
+      font-size: 2em; }
+    .ourstory .copy p {
+      font-size: 1.3em; }
+
+.latest {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.jewels1 {
+  background-color: red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 238px;
+  margin: 5%;
+  width: 214px; }
+
+.jewels3 {
+  background-color: orange;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 238px;
+  margin: 5%;
+  width: 214px; }
+
+.jewels2 {
+  background-color: yellow;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 238px;
+  margin: 5%;
+  width: 214px; }
+
+.jewels4 {
+  background-color: blue;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 238px;
+  margin: 5%;
+  width: 214px; }
