--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -360,10 +360,6 @@ template {
 [hidden] {
   display: none; }
 
-<<<<<<< HEAD
-body {
-  background-color: white; }
-=======
 /* =========================
    Hero Banner Section
    =========================
@@ -506,6 +502,26 @@ body {
     width: 51px;
     height: 51px; }
 
+/* =========================
+      Latest Additions Section
+   ========================= */
+.latest-additions {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  list-style: none;
+  font-size: .8em; }
+
+.latest-additions-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
 #footer {
   margin-top: 6%;
   width: 100%;
@@ -546,4 +562,6 @@ body {
   display: -ms-flexbox;
   display: flex;
   z-index: 99; }
->>>>>>> bf02e046ec26c00c9ddc1d1aaa44fed870244dc6
+
+body {
+  background-color: white; }
