fine tuned nav bar element positioning, added icons

--- a/themes/daria-day/sass/layout/_header.scss
+++ b/themes/daria-day/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .site-header {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 2fr 3fr 2fr;
+  justify-items: center;
   align-items: center;
   position: relative;
 
@@ -9,18 +9,31 @@
   padding: $menu-spacing * 2 $menu-spacing;
 
   border-bottom: $menu-border-size solid $brand-colour-evergreen;
-}
 
-.menu-toggle {
-  height: 100%;
-  width: 50px;
+  a {
+    display: block;
+    padding: $menu-spacing * 1.5 $menu-spacing;
 
-  border: none;
-  background-color: transparent;
-  font-size: 2em;
+    color: $brand-colour-evergreen;
+    text-transform: uppercase;
+  }
+
+  .custom-logo-link {
+    padding: 0;
+  }
 }
 
 .main-navigation{
+  justify-self: start;
+
+  .menu-toggle {
+    height: 100%;
+    width: 50px;
+  
+    border: none;
+    background-color: transparent;
+    font-size: 2em;
+  }
 
   ul {
     margin: 0;
@@ -42,7 +55,7 @@
       justify-content: flex-end;
 
       button {
-        padding: $menu-spacing * 1.5 $menu-spacing * 1.5 0;
+        padding: $menu-spacing * 1.5 $menu-spacing * 3 0;
 
         background-color: transparent;
         border: none;
@@ -60,23 +73,15 @@
         border-bottom: $menu-border-size / 2 solid $brand-colour-evergreen;
       }
     }
-
-    a {
-      display: block;
-      padding: $menu-spacing * 1.5 $menu-spacing;
-
-      color: $brand-colour-evergreen;
-      text-transform: uppercase;
-    }
   }
-}
-
-.hide-menu {
-  display: none;
 }
 
 .site-branding {
   height: 100%;
+
+  a {
+    height: 80%;
+  }
 
   img {
     height: 100%;
@@ -84,12 +89,41 @@
 }
 
 .nav-misc {
+  justify-self: end;
+
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+
+  padding-right: 10%;
+
+  > a {
+    padding: 0 $menu-spacing / 2;
+  }
+
+  > a img {
+    width: 25px;
+    height: 25px;
+  }
+}
+
+.hide-menu {
+  display: none;
+}
+
+@media screen and (min-width: $tablet) {
+  .nav-misc {
+    > a {
+      padding: 0 $menu-spacing;
+    }
+  }
 }
 
 @media screen and (min-width: $desktop) {
+  .site-header {
+    grid-template-columns: 2fr 1fr 2fr;
+  }
+
   .menu-toggle {
     display: none;
   }
@@ -109,7 +143,19 @@
 
         color: $brand-colour-evergreen;
         text-transform: uppercase;
+        text-align: center;
       }
+    }
+  }
+
+  .nav-misc {
+    > a {
+      padding: 0 $menu-spacing;
+    }
+
+    > a img {
+      width: 30px;
+      height: 30px;
     }
   }
 }
