product filter start

--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -63,7 +63,7 @@ sass/
 @import 'hero.scss';
 // Components
 @import 'components/slider';
-
+@import 'components/filter';
 // Layout
 @import 'layout/footer';
 
