changed close nav button to svg, reformatted a bit of front-page

--- a/themes/daria-day/sass/layout/_header.scss
+++ b/themes/daria-day/sass/layout/_header.scss
@@ -60,6 +60,11 @@
         background-color: transparent;
         border: none;
       }
+
+      img {
+        width: 1em;
+        height: 1em;
+      }
     }
 
     li {
