--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -61,7 +61,9 @@ sass/
 
 // Base
 @import 'base/normalize';
+@import 'base/typography';
 @import 'hero.scss';
+
 // Components
 @import 'components/slider';
 
