--- a/themes/daria-day/sass/components/_slider.scss
+++ b/themes/daria-day/sass/components/_slider.scss
@@ -4,17 +4,25 @@
   margin-top: 2.5%;
  
   .imgList {
-    width: 70%;
-    scroll-behavior: smooth;
     display: inline-block;
     position: relative;
+
+    width: 100%;
+    padding: 0;
+    padding-top: 2%;
+    
+    scroll-behavior: smooth;
     vertical-align: middle;
     text-align: center;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
-    padding-top: 2%;
+
+  }
+
+  ul {
+    padding: 0;
   }
 
   ul::-webkit-scrollbar {
