--- a/themes/daria-day/sass/components/_slider.scss
+++ b/themes/daria-day/sass/components/_slider.scss
@@ -1,61 +1,61 @@
-.slider {
-    // height: 300px;
-    text-align: center;
-    margin-top: 2.5%;
+// .slider {
+//     // height: 300px;
+//     text-align: center;
+//     margin-top: 2.5%;
     
-  }
+//   }
  
-    ul {
-      width: 70%;
-      scroll-behavior: smooth;
-      display: inline-block;
-      position: relative;
-      vertical-align: middle;
-      text-align: center;
-      overflow-x: scroll;
-      overflow-y: hidden;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-      padding-top: 2%;
-    }
+//     ul {
+//       width: 70%;
+//       scroll-behavior: smooth;
+//       display: inline-block;
+//       position: relative;
+//       vertical-align: middle;
+//       text-align: center;
+//       overflow-x: scroll;
+//       overflow-y: hidden;
+//       white-space: nowrap;
+//       -webkit-overflow-scrolling: touch;
+//       padding-top: 2%;
+//     }
 
 
-      ul::-webkit-scrollbar {
-      display: none;
-    }
-    li {
-      list-style: none;
-      display: inline-block;
-      position: relative;
-      vertical-align: middle;
-      width: 20%;
-      margin-left: 8.5%;
-      margin-right: 1.5%;
-      filter: grayscale(100%);
-        transition: 0.2s;
-    }
-  li {
-    width: 470px;
-  }
-    li:hover {
-      transition: 0.2s;
-      filter: grayscale(0);
-    }
+//       ul::-webkit-scrollbar {
+//       display: none;
+//     }
+//     li {
+//       list-style: none;
+//       display: inline-block;
+//       position: relative;
+//       vertical-align: middle;
+//       width: 20%;
+//       margin-left: 8.5%;
+//       margin-right: 1.5%;
+//       filter: grayscale(100%);
+//         transition: 0.2s;
+//     }
+//   li {
+//     width: 470px;
+//   }
+//     li:hover {
+//       transition: 0.2s;
+//       filter: grayscale(0);
+//     }
 
-.link{
-    text-decoration: none;
-}
+// .link{
+//     text-decoration: none;
+// }
 
-.title{
-    vertical-align: middle;
-}
+// .title{
+//     vertical-align: middle;
+// }
 
-.bracelets, .earrings,.necklaces, .energy{
+// .bracelets, .earrings,.necklaces, .energy{
 
-border: 2px solid #73AD21;
-padding: 20px; 
-width: 200px;
-height: 200px;  
-margin-left: 5%;
-}
+// border: 2px solid #73AD21;
+// padding: 20px; 
+// width: 200px;
+// height: 200px;  
+// margin-left: 5%;
+// }
 
