--- a/themes/daria-day/sass/components/_slider.scss
+++ b/themes/daria-day/sass/components/_slider.scss
@@ -6,11 +6,9 @@
   .imgList {
     display: inline-block;
     position: relative;
-
     width: 100%;
     padding: 0;
     padding-top: 2%;
-    
     scroll-behavior: smooth;
     vertical-align: middle;
     text-align: center;
@@ -58,7 +56,7 @@
     vertical-align: middle;
   }
 
-  .bracelets, .earrings,.necklaces, .energy {
+  #bracelets, #earrings,#necklaces, #energy {
   border: 2px solid #73AD21;
   padding: 20px; 
   width: 200px;
@@ -66,4 +64,47 @@
   margin-left: 5%;
   }
 
+}
+
+.container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.btn{
+	height: 10px;
+	width: 10px;
+	margin: 10px;
+	border-radius: 20%;
+	cursor: pointer;
+}
+.btn1{
+	background: orange;
+	position: relative;
+	overflow: hidden;
+}
+.btn2{
+	background: green;
+	position: relative;
+	overflow: hidden;
+}
+
+.btn3{
+	background: red;
+	position: relative;
+	overflow: hidden;
+}
+.btn4{
+	background: blue;
+	position: relative;
+	overflow: hidden;
+}
+
+
+
+@media screen and (min-width: 1024px) {
+  .container{
+    display: none;
+   
+  }
 }
