--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -595,12 +595,52 @@ template {
     text-decoration: none; }
   .slider .title {
     vertical-align: middle; }
-  .slider .bracelets, .slider .earrings, .slider .necklaces, .slider .energy {
+  .slider #bracelets, .slider #earrings, .slider #necklaces, .slider #energy {
     border: 2px solid #73AD21;
     padding: 20px;
     width: 200px;
     height: 200px;
     margin-left: 5%; }
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.btn {
+  height: 10px;
+  width: 10px;
+  margin: 10px;
+  border-radius: 20%;
+  cursor: pointer; }
+
+.btn1 {
+  background: orange;
+  position: relative;
+  overflow: hidden; }
+
+.btn2 {
+  background: green;
+  position: relative;
+  overflow: hidden; }
+
+.btn3 {
+  background: red;
+  position: relative;
+  overflow: hidden; }
+
+.btn4 {
+  background: blue;
+  position: relative;
+  overflow: hidden; }
+
+@media screen and (min-width: 1024px) {
+  .container {
+    display: none; } }
 
 .site-header {
   display: grid;
@@ -766,52 +806,52 @@ template {
   .header-search .search-field.show-search {
     width: 150px; } }
 
-#footer {
-  margin-top: 6%;
+.footer {
+  background-color: #062B35;
+  margin-top: 5%;
   width: 100%;
-  display: block; }
-
-.companyinfo {
-  margin-top: 6%;
-  width: 100%;
-  display: block; }
-  .companyinfo h3.widget-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 700px; }
+  .footer .companyinfo {
+    margin-top: 3%; }
+  .footer h3 {
     color: white;
     font-family: Avenir;
     font-size: 1.2em; }
-  .companyinfo a {
+  .footer a {
     text-decoration: none;
     color: white;
     font-family: Avenir;
     font-weight: 100;
     font-size: .8em; }
-  .companyinfo p {
-    line-height: .3; }
-  .companyinfo a:hover {
-    color: white;
+  .footer a:hover {
+    color: red;
     text-decoration: none;
     cursor: pointer; }
-
-#footer-sidebar {
-  width: 100%;
-  height: 600px;
-  display: grid;
-  background-color: #062B35;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  .footer #darialogo, .footer div#products, .footer div#company, .footer div#customers {
+    text-align: center; }
 
 #darialogo {
-  z-index: 99; }
+  background-image: url("../../images/DariaDay_logo-02 white.svg");
+  background-repeat: no-repeat;
+  background-size: 125px 175px; }
 
-div#products {
-  text-align: center; }
+@media screen and (min-width: 1024px) {
+  .footer {
+    height: 300px; }
+    .footer .companyinfo {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
 
-div#company {
-  text-align: center; }
-
-div#customers {
-  text-align: center; }
+@media screen and (min-width: 600px) {
+  .footer {
+    display: grid; } }
 
 .ourstory {
   background-color: #062B35;
@@ -821,23 +861,35 @@ div#customers {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: 23%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 10%;
     margin-top: 10%;
     height: 400px; }
     .ourstory .skewedphotos .photo1 {
-      background-color: green;
-      height: 238px;
-      width: 214px;
+      border: 2px solid #73AD21;
+      width: 200px;
+      height: 200px;
+      background-image: url("../../images/artisan3.jpg");
+      background-size: contain;
+      height: 148px;
+      width: 144px;
       -webkit-transform: rotate(-10deg);
               transform: rotate(-10deg); }
     .ourstory .skewedphotos .photo2 {
-      background-color: orange;
-      height: 238px;
-      width: 214px;
+      border: 2px solid #73AD21;
+      width: 200px;
+      height: 200px;
+      background-image: url("../../images/artisan1.jpg");
+      background-size: contain;
+      height: 148px;
+      width: 144px;
       -webkit-transform: translate(0, 50px) rotate(10deg);
               transform: translate(0, 50px) rotate(10deg); }
   .ourstory .copy {
     display: grid;
+    padding-right: 50px;
     color: white; }
     .ourstory .copy h4 {
       font-size: 2em; }
@@ -892,6 +944,37 @@ div#customers {
   height: 238px;
   margin: 5%;
   width: 214px; }
+
+/* =============================
+Media 
+============================= */
+@media screen and (min-width: 1024px) {
+  .ourstory {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-flow: row-reverse;
+            flex-flow: row-reverse;
+    width: 100%; }
+  .copy {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 40%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 30%; } }
+
+@media screen and (min-width: 600px) {
+  .ourstory .skewedphotos .photo1 {
+    height: 248px;
+    width: 244px; }
+  .ourstory .skewedphotos .photo2 {
+    height: 248px;
+    width: 244px; } }
 
 /*
 =========================
